--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capstonefyndshivam",
+  "name": "testdeplay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shawnmarkus/capstoneFYNDshivam.git"
+    "url": "git+https://github.com/shawnmarkus/testdeplay.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shawnmarkus/capstoneFYNDshivam/issues"
+    "url": "https://github.com/shawnmarkus/testdeplay/issues"
   },
-  "homepage": "https://github.com/shawnmarkus/capstoneFYNDshivam#readme",
+  "homepage": "https://github.com/shawnmarkus/testdeplay#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
