--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
 node_modules
-backend/constant/secrets/config.env
-backend/post.js
+/backend/constant/secrets
+/backend/post.js
+/testAPI.http
+
+
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
 
 # Editor directories and files
-backend/.vscode/*
+.vscode/*
 !.vscode/extensions.json
 .idea
 *.suo
